--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ nav a:hover::before {
 
 .line {
   margin-top: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   width: 40vw;
   height: 1px;
   mix-blend-mode: normal;
@@ -99,18 +99,7 @@ nav a:hover::before {
 a:-webkit-any-link {
     text-decoration: none;
 }
-.col-1 { width: 4.8076923077% }
-.col-2 { width: 13.4615384615% }
-.col-3 { width: 22.1153846154% }
-.col-4 { width: 30.7692307692% }
-.col-5 { width: 39.4230769231% }
-.col-6 { width: 48.0769230769% }
-.col-7 { width: 56.7307692308% }
-.col-8 { width: 65.3846153846% }
-.col-9 { width: 74.0384615385% }
-.col-10 { width: 82.6923076923% }
-.col-11 { width: 91.3461538462% }
-.col-12 { width: 100%; margin: 0 }
+
 
 header {
     text-align: center;
@@ -153,8 +142,8 @@ h1 {
   width: auto;
   text-align: center;
   padding-top: 5vh;
-  background-color: #e7e5f112;
-  color: #408486;
+  background-color:#408486;
+  color: #d5f8f2;
 }
 
 .my-p {
@@ -164,8 +153,6 @@ h1 {
 }
 .my-p img {
   border-radius: 50%;
-  border: 0.5px solid;
-  border-color: #8e8d8d;
   height: 100%;
   width: auto;
 }
@@ -192,3 +179,34 @@ h1 {
 .go-top a {
   color: #408486;
 }
+
+.go-top a::before {
+  content: '';
+  display: block;
+  height: 3px;
+  background-color:#408486;
+
+  position: absolute;
+  bottom: 0;
+  width: 0%;
+
+  transition: all ease-in-out 250ms;
+}
+
+.go-top a:hover::before {
+  width: 35px;
+}
+
+
+.col-1 { width: 4.8076923077% }
+.col-2 { width: 13.4615384615% }
+.col-3 { width: 22.1153846154% }
+.col-4 { width: 30.7692307692% }
+.col-5 { width: 39.4230769231% }
+.col-6 { width: 48.0769230769% }
+.col-7 { width: 56.7307692308% }
+.col-8 { width: 65.3846153846% }
+.col-9 { width: 74.0384615385% }
+.col-10 { width: 82.6923076923% }
+.col-11 { width: 91.3461538462% }
+.col-12 { width: 100%; margin: 0 }
